# geoip.py

./: LICENSE.TXT  README.md  pyproject.toml
Surfy.GeoIP.egg-info/: PKG-INFO  SOURCES.txt
geoip/: __init__.py  __main__.py  lookup.py
tests/: test.py
